test04/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test04
spec:
  replicas: 4
  selector:
    matchLabels:
      app: test04
  template:
    metadata:
      labels:
        app: test04
    spec:
      containers:
        - name: main
          image: dhltraining.azurecr.io/ondrejsika/training-example
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /livez
              port: 80
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 20m
              memory: 20Mi
