test04/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: test00
spec:
  selector:
    app: test00
  ports:
    - port: 80
      targetPort: test04
